--- a/index.html
+++ b/index.html
@@ -170,12 +170,13 @@ function setDisconnected() {
     <img src="gallery/mint5.jpg" alt="">
     <img src="gallery/mint7.jpg" alt="">
 </div>
-
 <!-- Minting Section -->
 <div id="mint-section" class="section">
   <h2 class="section-title">SMART CONTRACT</h2>
   <p class="smart-contract">
-    0x1BEe8d11f11260A4E39627EDfCEB345aAfeb57d9
+    <a href="https://bscscan.com/address/0x1BEe8d11f11260A4E39627EDfCEB345aAfeb57d9" target="_blank" style="color: inherit; text-decoration: none;">
+      0x1BEe8d11f11260A4E39627EDfCEB345aAfeb57d9
+    </a>
   </p>
 </div>
 </div>
@@ -593,6 +594,7 @@ function setDisconnected() {
  <script src="https://cdn.jsdelivr.net/npm/ethers@6.10.0/dist/ethers.umd.min.js"></script>
  <script src="main.js"></script>
 <script src="mintauto.js"></script>
+  <script src="scrollfix.js"></script>
 
 </body>
 </html>
