--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Web3 Wallet Connect</title>
 
   <!-- Your CSS files -->
+  <link rel="stylesheet" href="discription.css">
   <link rel="stylesheet" href="bottons.css">
   <link rel="stylesheet" href="home.css" />
   <link rel="stylesheet" href="gallery.css" />
