--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@ function setDisconnected() {
             </div>
             <div class="contact-item">
                 <label>COMPANY EMAIL</label>
-                <p>contact@cyberpunk.com</p>
+                <p>ebray783@fpv-token.com</p>
             </div>
             <div class="contact-item">
                 <label>Contact Number</label>
@@ -582,7 +582,7 @@ function setDisconnected() {
             </div>
             <div class="contact-item">
                 <label>Telegram</label>
-                <p>@CyberPunkSupport</p>
+                <p>https://t.me/fpvdronetokent</p>
             </div>
             <div class="contact-item">
                 <label>WhatsApp</label>
