--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ function setDisconnected() {
      <footer>
        <div class="contact-links">
          <a href="https://t.me/+-7upCv9T2MtiZjNk">🔹 Telegram</a>
-         <a href="https://twitter.com/your_handle" target="_blank">🔹 Twitter</a>
+         <a href="https://x.com/fpvdronetoken?t=Lps3CdRYL7Udm47BBfX_fg&s=09" target="_blank">🔹 Twitter</a>
          <a href="https://wa.me/your_number" target="_blank">🔹 WhatsApp</a>
          <a href="mailto:ebray783@gmail.com">🔹 Email</a>
        </div>
@@ -582,7 +582,7 @@ function setDisconnected() {
             </div>
             <div class="contact-item">
                 <label>Telegram</label>
-                <p>https://t.me/fpvdronetokent</p>
+                <p>t.me/fpvdronetokent</p>
             </div>
             <div class="contact-item">
                 <label>WhatsApp</label>
