--- a/index.html
+++ b/index.html
@@ -582,7 +582,7 @@ function setDisconnected() {
             </div>
             <div class="contact-item">
                 <label>Telegram</label>
-                <p>t.me/fpvdronetokent</p>
+                <p>t.me/fpvdronetoken</p>
             </div>
             <div class="contact-item">
                 <label>WhatsApp</label>
