--- a/index.html
+++ b/index.html
@@ -151,6 +151,11 @@ function setDisconnected() {
   </a>
 </div>
 
+    <a href="https://pancakeswap.finance/swap?inputCurrency=0x1BEe8d11f11260A4E39627EDfCEB345aAfeb57d9" target="_blank" rel="noopener">
+    <button>Sell</button>
+  </a>
+</div>
+
 
 <h2 class="section-title">About the Project</h2>
 <p class="description">
