--- a/index.html
+++ b/index.html
@@ -150,11 +150,16 @@ function setDisconnected() {
     <button>Sell</button>
   </a>
 </div>
-
-    <a href="https://pancakeswap.finance/swap?inputCurrency=0x1BEe8d11f11260A4E39627EDfCEB345aAfeb57d9" target="_blank" rel="noopener">
+<div class="button-group">
+  <a href="https://pancakeswap.finance/swap?outputCurrency=0x1BEe8d11f11260A4E39627EDfCEB345aAfeb57d9" target="_blank" rel="noopener">
+    <button>Buy</button>
+  </a>
+  <a href="https://pancakeswap.finance/swap?inputCurrency=0x1BEe8d11f11260A4E39627EDfCEB345aAfeb57d9" target="_blank" rel="noopener">
     <button>Sell</button>
   </a>
 </div>
+
+  
 
 
 <h2 class="section-title">About the Project</h2>
