--- a/index.html
+++ b/index.html
@@ -143,18 +143,10 @@ function setDisconnected() {
 </p>
 
 <div class="button-group">
-  <a href="https://pancakeswap.finance/swap?outputCurrency=0x1BEe8d11f11260A4E39627EDfCEB345aAfeb57d9" target="_blank" rel="noopener">
+  <a href="https://pump.fun/coin/678XVxVx7qgEe45cpvvVQCkraFDKBscoheAgsKk4pump
     <button>Buy</button>
   </a>
-  <a href="https://pancakeswap.finance/swap?inputCurrency=0x1BEe8d11f11260A4E39627EDfCEB345aAfeb57d9" target="_blank" rel="noopener">
-    <button>Sell</button>
-  </a>
-</div>
-<div class="button-group">
-  <a href="https://pancakeswap.finance/swap?outputCurrency=0x1BEe8d11f11260A4E39627EDfCEB345aAfeb57d9" target="_blank" rel="noopener">
-    <button>Buy</button>
-  </a>
-  <a href="https://pancakeswap.finance/swap?inputCurrency=0x1BEe8d11f11260A4E39627EDfCEB345aAfeb57d9" target="_blank" rel="noopener">
+  <a href="https://pump.fun/coin/678XVxVx7qgEe45cpvvVQCkraFDKBscoheAgsKk4pump
     <button>Sell</button>
   </a>
 </div>
