--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ function setDisconnected() {
 <div id="mint-section" class="section">
   <h2 class="section-title">SMART CONTRACT</h2>
   <p class="smart-contract">
-    <a href="https://bscscan.com/address/0x1BEe8d11f11260A4E39627EDfCEB345aAfeb57d9" target="_blank" style="color: inherit; text-decoration: none;">
+    <a href="https://pump.fun/coin/678XVxVx7qgEe45cpvvVQCkraFDKBscoheAgsKk4pump" target="_blank" style="color: inherit; text-decoration: none;">
       0x1BEe8d11f11260A4E39627EDfCEB345aAfeb57d9
     </a>
   </p>
