--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@ function setDisconnected() {
 </p>
 
 <div class="button-group">
-  <a href="https://pump.fun/coin/678XVxVx7qgEe45cpvvVQCkraFDKBscoheAgsKk4pump
+  <a href="https://
     <button>Buy</button>
   </a>
-  <a href="https://pump.fun/coin/678XVxVx7qgEe45cpvvVQCkraFDKBscoheAgsKk4pump
+  <a href="https://
     <button>Sell</button>
   </a>
 </div>
@@ -177,8 +177,8 @@ function setDisconnected() {
 <div id="mint-section" class="section">
   <h2 class="section-title">SMART CONTRACT</h2>
   <p class="smart-contract">
-    <a href="https://pump.fun/coin/678XVxVx7qgEe45cpvvVQCkraFDKBscoheAgsKk4pump" target="_blank" style="color: inherit; text-decoration: none;">
-      678XVxVx7qgEe45cpvvVQCkraFDKBscoheAgsKk4pump
+    <a href="0x1BEe8d11f11260A4E39627EDfCEB345aAfeb57d9" target="_blank" style="color: inherit; text-decoration: none;">
+      0x1BEe8d11f11260A4E39627EDfCEB345aAfeb57d9
     </a>
   </p>
 </div>
